--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
+    "lucide-react": "^0.469.0",
+    "next": "15.1.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "postcss": "^8",
